--- a/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
+++ b/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
@@ -2,9 +2,14 @@
 share: true
 strip_comments: true
 fix_heading: true
-title: |
-  Nuremberg and the Declaration of Helsinki
+title: 7. What Policies Are in Place for Regulating Research with Human Subjects?
+aliases:
+  - Section VII
 ---
+
+Advances in science and technology, and an increasingly complex network of stakeholders, have led to a range of national responses to the international call for ethical biomedical research. Countries have operationalized and expanded the directive of the Declaration of Helsinki in various ways. In most cases, the establishment of regulatory bodies and rules was in response to news that unethical practices had occurred.
+
+# Nuremberg and the Declaration of Helsinki
 
 During WWII, Nazi Germany industrialized medical research, using prisoners as test subjects. Their practices extended to the most marginalized and persecuted, and included orphans, the mentally ill, and those of ethnicities deemed unfit by their ideology. The uncovering of these practices led to an international effort to curtail harms to those captured during war, but also extended protections more generally to all medical research subjects. A brief overview of the history leading to policy and practice regarding human research subjects is outlined below.
 
@@ -44,3 +49,30 @@ Given the UK’s dedication to regulating the collection, management, and access
 Both the ANPRM and the EU legislative processes allowed for public input, and in some cases, open letters influenced the final outcomes. In the EU the European Data in Health Research Alliance, which included the Wellcome Trust, pushed hard for the reversal using the URL “Datasaveslives.com.” In the US, the National Institutes of Health funded a project to collect public opinion through surveys informed by a meta analysis of patient and research subjects’ views via the Consent, Education, Regulation, and Consultation (CERC) Working Group of the Electronic Medical Records and Genomics (eMERGE) consortium working group (<mark style="background: #ADCCFFA6;">Garrison et al., 2015</mark>).
 
 <mark style="background: #FFB8EBA6;">Embryo.IVF.Extranumerary ZoomGraphic</mark>
+
+# Technological Advances and Policy Making
+
+In many countries, the interpretation of human subject ethics in the context of generating national biobanks presents new challenges.
+
+Iceland’s deCode, a company purchased by Amgen, has come under fire for a study that seeks to triangulate data from human research volunteers, genomic databases, and family members’ medical records. This is the second time that Kari Stefansson, founder of deCode, has run into problems when creating a “work-around” for informed consent as it relates to population studies. The Icelandic Data Protection Agency (DPA), ruled that the company must first obtain informed consent from each individual to be studied, and that health records can be not be treated as publicly available information (<mark style="background: #ADCCFFA6;">Kasier, 2013</mark>).
+
+In the US, the 2010 Stem Cell Research Enhancement Act implemented a policy to increase cord blood banking. This policy was in response to a Government Accountability Office (GAO) report that highlighted the lack of diversity in public cord blood banks. Cord blood has in recent years become the preferred source of blood stem cells that are used during transplant therapies for blood-related disorders, due to its less immunogenic properties and less invasive collection method as compared to either blood stem cells collected from bone marrow or the peripheral blood supply. Despite efforts to increase awareness around donations post-birth, 97% of all cord blood is discarded as medical waste, with the majority of donations occurring in the private cord blood banking sector. Reasons for the low donation rate include general mistrust of the biomedical community, concerns regarding identity and privacy associated with the samples, and resistance to the creation of marketable goods that may subsequently be inaccessible for the donor (<mark style="background: #ADCCFFA6;">Mohapatra, 2013</mark>).
+
+<mark style="background: #FFB8EBA6;">Adult. Adult Cell Source. Blood Stem Cells ZoomGraphic</mark>
+
+# Patents and Laws
+
+As the number and types of biobanks increase so, too, have the number of court rulings associated with biobanking, resulting in a significant impact on the diversity of, and public access to, banked human tissues and cells. Court cases can be divided into those addressing the patenting of banking processes and those that address banked products.
+
+In 2002, Pharmastem, a leader in cord blood banking, sought licensing fees from commercial umbilical cord banks using their collection, freezing, and storage technology. Ultimately, Pharmastem sued the commercial banks for patent infringement, threatening the livelihood of not only commercial cord blood banks but public cord blood banks as well. The cord blood banks argued that the technologies were ubiquitous in cell banking and thus, considered “prior art.” In 2009, the courts decided that the Pharmastem patents were invalid because the companies were not buying or selling cord blood, but simply providing a paid service to families interested in banking their newborn’s blood stem cells (<mark style="background: #ADCCFFA6;">Kurtzberg, J. et al. 2005</mark>).
+
+In 2013, the US Supreme court decided that Myriad Genetics’s product patents on BRCA1/2 DNA sequences were not valid, reversing twenty years of patenting in the biotech sector. The court, however, maintained the validity of process patents for techniques in which a drug or diagnostic is developed based on DNA sequence information. Following these earlier rulings, it would seem that tissue samples themselves can not be patented because they occur naturally in human bodies, making them a public good (<mark style="background: #ADCCFFA6;">Marshall & Price, 2013</mark>). Yet, any discoveries made using such samples would continue to be patentable and thus, marketable. This stance regarding tissues and cells is apparent in decisions to invalidate the Wisconsin Alumni Research Fund (WARF) patents on the first human embryonic stem cell lines, which were created using private funding and extranumerary embryos that had been donated from fertility clinics (<mark style="background: #ADCCFFA6;">Wadman, 2005</mark>).
+
+In all of the above instances, financial benefit could be bestowed to all stakeholders, except the individuals from whom tissue or DNA samples are acquired (<mark style="background: #ADCCFFA6;">Kominers & Becker, 2012</mark>). In the US, the Bayh-Dole act of 1980 permits development of marketable and patentable products using basic scientific research conducted by universities that are funded by federal money (<mark style="background: #ADCCFFA6;">Loise & Stevens, 2010</mark>). This policy has created the field of translational science, which involves moving basic science from the laboratory bench to the clinic.
+
+In some cases, the perceived inequity of financial benefit to some stakeholders (biomedical researchers, universities, the pharmaceutical industry, or national governments) and not others (human research subjects) has resulted in patients who sue to protect their individual rights as they relate to ownership and compensation. In most cases, courts have declared loss of individual ownership for material that has been removed from the body in a therapeutic context.
+
+To avoid such complications and reduce undue inducement associated with participation, France has restricted monetary payments to human research subjects. (<mark style="background: #ADCCFFA6;">VanderWalde & Kurzban, 2011</mark>). Meanwhile, many countries are utilizing opt-out policies in which all clinical samples can be used for research under the auspices of “presumed consent,” with no financial benefit accruing to donors regardless of whether therapies or diagnostics are developed using their samples (<mark style="background: #ADCCFFA6;">Anonymous, 2013</mark>). This approach is already used in five countries in the realm of organ donation and is continuing to expand (<mark style="background: #ADCCFFA6;">Harman, 2009</mark>).
+
+<mark style="background: #FFF3A3A6;">**Video:** Nov 11, 2015. The Challenge of Informed Consent In Times of Controversy. UC Irvine School of Law. Video footage is broken up by speaker and topic. Panels are tackle complicated issues. Radhika Rhao specifically addresses Henrietta Lacks and Deborah Laufer, playwright of Informed Consent site pushes back on biomedical ethics, while Marcy Darnovsky brings in issues of equity and social justice on Panel 2. Link</mark>
+
