PUSH NOTE : 7. What Policies Are in Place for Regulating Research with Human Subjects?.md

--- a/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
+++ b/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
@@ -22,7 +22,7 @@ During WWII, Nazi Germany industrialized medical research, using prisoners as te
 > 
 > Except as provided elsewhere in this policy, no investigator may involve a human being as a subject in research covered by this policy unless the investigator has obtained the legally effective informed consent of the subject or the subject's legally authorized representative. -[The Common Rule 1981](http://www.hhs.gov/ohrp/humansubjects/commonrule/)
 
-## Belmont Report and The Common Rule
+# Belmont Report and The Common Rule
 
 In the US, The National Research Act of 1974 and the Belmont Report of 1978 require that human research subjects be informed of risk-benefit ratios, have autonomy in decision making, and have the ability to discontinue participation at any time. These regulations emerged when it was revealed that the US Public Health Service engaged in the Tuskegee Syphilis experiments of 1932-1973. The Tuskegee Trial prevented African-American men from acquiring antibiotic treatments even after the drugs became available in the 1940s. The rationale for the study was to study the disease progression in African American males over the course of their lifetimes. The Act has since been updated to provide special provisions for vulnerable populations including women, children, and prisoners ([Code of Federal Regulations title 45](http://www.hhs.gov/ohrp/humansubjects/guidance/45cfr46.html)).
 
