PUSH NOTE : 7. What Policies Are in Place for Regulating Research with Human Subjects?.md

--- a/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
+++ b/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
@@ -28,7 +28,7 @@ In the US, The National Research Act of 1974 and the Belmont Report of 1978 requ
 
 In 1991, the Act was extended from the Department of Health and Human Services to the Food and Drug Administration (FDA) and fourteen other federal agencies, and is now known as the “Common Rule.” In this capacity, the Common Rule requires institutions to formulate an Institutional Review Board ([IRB Guidebook](http://www.hhs.gov/ohrp/archive/irb/irb_guidebook.htm)) to oversee federally-funded research practices involving human subjects. IRB committee composition is designed to reduce conflicts of interest, and includes members from the institution who span a wide array of disciplines and practices, as well as members from the community and other institutions or organizations. All researchers supported by federal funding and using human subjects must apply for IRB approval, regardless of whether the research subjects reside in the US or other countries
 
-<mark style="background: #FFB8EBA6;">Human Subjects Research Timeline</mark>
+<mark style="background: #FFB8EBA6;">[Human Subjects Research Timeline](http://stemcellcurriculum.org/timelines.html)</mark>
 
 In 2010 more discoveries of the USPHS studies abroad prompted President Obama to request for a review and redress of the code of conduct regarding research using human subjects ([Obama, 2010](http://bioethics.gov/sites/default/files/news/Human-Subjects-Protection-Letter-from-President-Obama-11.24.10.pdf)). These egregious practices included federally funded research that included forced sterilization of women in the name of reproductive medicine, deliberate infection of individuals in Guatemala to study sexually transmitted diseases, and DNA research that questioned the heritage of the Havasupai without their permission ([Presidential Commission for the Study of Bioethical Issues, 2011a](https://law.stanford.edu/wp-content/uploads/2011/09/EthicallyImpossible_PCSBI_110913.pdf); [Presidential Commission for the Study of Bioethical Issues, 2011b](https://bioethicsarchive.georgetown.edu/pcsbi/node/558.html); [Anonymous, 2012](http://www.nature.com/nature/journal/v484/n7394/full/484287a.html); [Garrison, 2013](http://sth.sagepub.com/content/38/2/201); [Lehrman, 2013](https://medium.com/stem-and-culture-chronicle/shifting-roles-shifting-research-collaborative-genetic-studies-with-indigenous-communities-a5196be3552c)).
 
