--- a/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
+++ b/docs/Immortality & Cancer Module/7. What Policies Are in Place for Regulating Research with Human Subjects?.md
@@ -34,21 +34,19 @@ In 2010 more discoveries of the USPHS studies abroad prompted President Obama to
 
 <mark style="background: #FFF3A3A6;">Video:Thirteen/Education Broadcasting Corporation (Producer.) June 25, 2010. Religion & Ethics Weekly: Informed Consent and Medical Research. (7:22 min) [Link](http://www.pbs.org/wnet/religionandethics/episodes/june-25-2010/informed-consent-and-medical-research/6545/)</mark>
 
-In response to the President’s executive order to minimize harm and increase effectiveness of research with human subjects, The Office of Management and Budget convened a working group titled Advance Notice of Proposed Rule Making (ANPRM). In addition, the National Bioethics Committee and the National Academies of Sciences (NAS) issued reports documenting needed improvements in the system (Emanuel et al., 2011). Collectively, these committees and working groups proposed revised standards that address advances in science and technology and increased education and awareness. To that end, the National Bioethics Committee published a Study Guide titled “Ethically Impossible” for educators (Presidential Commission for the Study of Bioethical Issues, 2012). In addition to this guide, the Commission created an Education Link with several other teaching tools with many available in Spanish.
+In response to the President’s executive order to minimize harm and increase effectiveness of research with human subjects, The Office of Management and Budget convened a working group titled Advance Notice of Proposed Rule Making (ANPRM). In addition, the National Bioethics Committee and the National Academies of Sciences (NAS) issued reports documenting needed improvements in the system <mark style="background: #ADCCFFA6;">([Emanuel et al., 2011](http://www.nejm.org/doi/full/10.1056/NEJMsb1106942))</mark>. Collectively, these committees and working groups proposed revised standards that address advances in science and technology and increased education and awareness. To that end, the National Bioethics Committee published a Study Guide titled “Ethically Impossible” for educators <mark style="background: #ADCCFFA6;">([Presidential Commission for the Study of Bioethical Issues, 2012](https://bioethicsarchive.georgetown.edu/pcsbi/node/787.html))</mark>. In addition to this guide, the Commission created an <mark style="background: #ADCCFFA6;">[Education Link](https://bioethicsarchive.georgetown.edu/pcsbi/education.html)</mark> with several other teaching tools with many available in Spanish.
 
-Unlike the original Common Rule, the proposed changes address ethical issues concerning privacy, compensation, and ownership that extend beyond the body of the human subject and include tissues, cells, and DNA of the individual, otherwise referred to as biospecimens. The proposals also emphasized a participatory action research model, in which communities are involved in directing and informing research practices and benefits to the community outweigh harms. Although some welcomed these proposals, were stalled until January 2017, due to concerns that such intensive management would stunt research efforts (Chamany, 2015; Anonymous, 2013a). In the interim, some researchers became wary of using clinical samples in population-based research (Emanuel et al., 2011).
+Unlike the original Common Rule, the proposed changes address ethical issues concerning privacy, compensation, and ownership that extend beyond the body of the human subject and include tissues, cells, and DNA of the individual, otherwise referred to as biospecimens. The proposals also emphasized a participatory action research model, in which communities are involved in directing and informing research practices and benefits to the community outweigh harms. Although some welcomed these proposals, were stalled until January 2017, due to concerns that such intensive management would stunt research efforts <mark style="background: #ADCCFFA6;">([Chamany, 2015](https://www.geneticsandsociety.org/biopolitical-times/new-rules-proposed-address-privacy-and-trust-precision-medicine-initiative); [Anonymous, 2013a](http://www.nature.com/news/a-culture-of-consent-1.13262))</mark>. In the interim, some researchers became wary of using clinical samples in population-based research <mark style="background: #ADCCFFA6;">([Emanuel et al., 2011](http://www.nejm.org/doi/full/10.1056/NEJMsb1106942))</mark>.
 
-In 2017, after an extensive review including 2100 public comments, the Common Rule was revised. In an effort to inform research subjects and avoid lengthy and jargon ridden language, the revisions require a concise summary of benefits and risks to research subjects. Additionally, identifiable specimens can be secured under broad consent, while de-identified specimens, as was previously done, do not require informed consent and IRB review. This last provision came under great scrutiny, given the media coverage of the HeLa cell line and its derivation alongside other case examples of dual use. Dual use in this context refers
+In 2017, after an extensive review including 2100 public comments, the <mark style="background: #ADCCFFA6;">[Common Rule was revised](https://www.hhs.gov/ohrp/regulations-and-policy/regulations/finalized-revisions-common-rule/index.html)</mark>. In an effort to inform research subjects and avoid lengthy and jargon ridden language, the revisions require a concise summary of benefits and risks to research subjects. Additionally, identifiable specimens can be secured under broad consent, while de-identified specimens, as was previously done, do not require informed consent and IRB review. This last provision came under great scrutiny, given the media coverage of the HeLa cell line and its derivation alongside other case examples of dual use. Dual use in this context refers to specimens acquired for diagnosis and/or treatment and also for research. Though the proposed revisions had intended to require consent in these circumstances, many researchers felt it would halt research and, thus, this aspect of the rule was not revised.
 
-to specimens acquired for diagnosis and/or treatment and also for research. Though the proposed revisions had intended to require consent in these circumstances, many researchers felt it would halt research and, thus, this aspect of the rule was not revised.
+Like the US, the United Kingdom has also implemented policies to uphold the ethos of the Declaration of Helsinki. These policies extend beyond the national healthcare system to include research practices and new technologies. The UK is considered a leader in this regard with a universal health care system and the establishment of the Human Tissue Authority (HTA) and the Human Fertilisation and Embryo Authority (HFEA). These bodies regulate practices surrounding collection and banking of biospecimens and issue licenses to those seeking their use in research. The UK has, in an unusual move, also addressed the balance between benefit and risk for research subjects by constructing a no-fault insurance fund for unintended medical harm suffered by research subjects within the context of research <mark style="background: #ADCCFFA6;">([VanderWalde & Kurzban, 2011](http://www.ncbi.nlm.nih.gov/pubmed/21871049))</mark>. In order to address benefits more directly, the HFEA has additionally instituted an egg-sharing policy in 1993, which allows individuals seeking assisted reproductive technologies to obtain additional cycles at reduced cost, if they donate 50% of their eggs to biomedical research <mark style="background: #ADCCFFA6;">([HFEA Egg Sharing Schemes](http://webarchive.nationalarchives.gov.uk/20111114231523tf_/http://www.hfea.gov.uk/1411.html))</mark>.
 
-Like the US, the United Kingdom has also implemented policies to uphold the ethos of the Declaration of Helsinki. These policies extend beyond the national healthcare system to include research practices and new technologies. The UK is considered a leader in this regard with a universal health care system and the establishment of the Human Tissue Authority (HTA) and the Human Fertilisation and Embryo Authority (HFEA). These bodies regulate practices surrounding collection and banking of biospecimens and issue licenses to those seeking their use in research. The UK has, in an unusual move, also addressed the balance between benefit and risk for research subjects by constructing a no-fault insurance fund for unintended medical harm suffered by research subjects within the context of research (VanderWalde & Kurzban, 2011). In order to address benefits more directly, the HFEA has additionally instituted an egg-sharing policy in 1993, which allows individuals seeking assisted reproductive technologies to obtain additional cycles at reduced cost, if they donate 50% of their eggs to biomedical research (HFEA Egg Sharing Schemes)
+Given the UK’s dedication to regulating the collection, management, and access to biospecimens, the ANPRM regarding the Common Rule turned to the UK and more generally the EU for guidance and adopted similar proposals. These included requiring projects funded by private dollars to abide by the Common Rule, but in the same breath eliminating the need for broad consent for de-identified specimens. The European Union, which had taken a similar approach, reversed its position at the end of 2015 drafting legislation that would grant researchers access to data for which patients or research subjects provided broad consent <mark style="background: #ADCCFFA6;">([Feldwisch-Drentrup, 2015](http://news.sciencemag.org/2015/12/eu-frees-data-science))</mark>.
 
-Given the UK’s dedication to regulating the collection, management, and access to biospecimens, the ANPRM regarding the Common Rule turned to the UK and more generally the EU for guidance and adopted similar proposals. These included requiring projects funded by private dollars to abide by the Common Rule, but in the same breath eliminating the need for broad consent for de-identified specimens. The European Union, which had taken a similar approach, reversed its position at the end of 2015 drafting legislation that would grant researchers access to data for which patients or research subjects provided broad consent (Feldwisch- Drentrup, 2015).
+Both the ANPRM and the EU legislative processes allowed for public input, and in some cases, open letters influenced the final outcomes. In the EU the European Data in Health Research Alliance, which included the Wellcome Trust, pushed hard for the reversal using the URL “<mark style="background: #ADCCFFA6;">[Datasaveslives.com](https://www.datasaveslives.info/)</mark>.” In the US, the National Institutes of Health funded a project to collect public opinion through <mark style="background: #ADCCFFA6;">[surveys](http://slideplayer.com/slide/7497538/)</mark> informed by a meta analysis of patient and research subjects’ views via the Consent, Education, Regulation, and Consultation (CERC) Working Group of the Electronic Medical Records and Genomics (eMERGE) consortium working group (<mark style="background: #ADCCFFA6;">[Garrison et al., 2015](http://www.nature.com/gim/journal/vaop/ncurrent/full/gim2015138a.html)</mark>).
 
-Both the ANPRM and the EU legislative processes allowed for public input, and in some cases, open letters influenced the final outcomes. In the EU the European Data in Health Research Alliance, which included the Wellcome Trust, pushed hard for the reversal using the URL “Datasaveslives.com.” In the US, the National Institutes of Health funded a project to collect public opinion through surveys informed by a meta analysis of patient and research subjects’ views via the Consent, Education, Regulation, and Consultation (CERC) Working Group of the Electronic Medical Records and Genomics (eMERGE) consortium working group (<mark style="background: #ADCCFFA6;">Garrison et al., 2015</mark>).
-
-<mark style="background: #FFB8EBA6;">Embryo.IVF.Extranumerary ZoomGraphic</mark>
+<mark style="background: #FFB8EBA6;">[Embryo.IVF.Extranumerary ZoomGraphic](http://stemcellcurriculum.org/infographics.html)</mark>
 
 # Technological Advances and Policy Making
 
